# stock-exchange-tools

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  index_investing_tool.conf.templ
data/bvb/: BET-BK_adjustments_history.txt  BET-EF_adjustments_history.txt  BET-FI_adjustments_history.txt  BET-NG_adjustments_history.txt  BET-TRN_adjustments_history.txt  BET-TR_adjustments_history.txt  BET-XT-TRN_adjustments_history.txt  BET-XT-TR_adjustments_history.txt  BET-XT_adjustments_history.txt  BETAeRO_adjustments_history.txt  BETPlus_adjustments_history.txt  BET_adjustments_history.txt
include/: activity_type.h  asset_type.h  bvb_scraper.h  chrono_utils.h  cli_utils.h  closed_interval.h  curl_utils.h  currency.h  error.h  html_parser.h  noncopyable.h  nonmovable.h  scoped_ptr.h  stock_index.h  string_utils.h  tradeville.h  tradeville_activity_filters.h  tradeville_portfolio_filters.h  websocket_connection.h
src/: bvb_scraper.cpp  bvb_scraper_tool.cpp  chrono_utils.cpp  cli_utils.cpp  curl_utils.cpp  html_parser.cpp  string_utils.cpp  tradeville.cpp  websocket_connection.cpp
src/index_investing/: config.cpp  config.h  index_replication.cpp  index_replication.h  main.cpp  terminal_ui.cpp  terminal_ui.h
test/: bvb_scraper_test.cpp  html_parser_test.cpp
test/data/: parse_dividend_activities.txt  parse_index_adjustments_history.txt  parse_index_adjustments_history_selected.txt  parse_index_constituents.txt  parse_index_constituents_selected.txt  parse_index_trading_data.txt  parse_index_trading_data_with_missing_fields.txt  parse_indexes_names_data.txt  parse_indexes_performance_data.txt
